# hcom

./: Cargo.toml  README.md  config.example.toml  dist-workspace.toml  install.sh  pyproject.toml
.agents/skills/hcom/: SKILL.md
.agents/skills/hcom/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude-plugin/: marketplace.json
.claude/commands/: codex-hook-trust-state-management.md  codex-hook-trust-update.md  dependency-version-bump-release.md  dependency-version-bump.md  relay-feature-fix-or-enhancement.md  relay-feature-fix-or-update.md
.claude/homunculus/instincts/inherited/: hcom-instincts.yaml
.claude/skills/hcom/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: build-wheels.yml  ci.yml  publish-pypi.yml  release.yml
plugin/hcom/.claude-plugin/: plugin.json
skills/hcom-agent-messaging/: SKILL.md
src/: config.rs  delivery.rs  launcher.rs  terminal.rs  update.rs
src/commands/: hooks.rs  relay.rs  run.rs  status.rs  term.rs
src/db/: notify.rs
src/hooks/: claude_args.rs  codex.rs
src/pty/: inject.rs  mod.rs
src/relay/: client.rs  control.rs  mod.rs  worker.rs
src/tools/: codex_args.rs  codex_preprocessing.rs  gemini_args.rs
tests/: parser_help_drift.rs  test_pty_delivery.rs
