[package]
name = "hcom"
version = "0.7.16"
edition = "2024"
authors = ["hcom"]
description = "Connect Claude Code, Gemini CLI, Codex, and OpenCode so agents can message, watch, and spawn each other across terminals"
license = "MIT"
homepage = "https://github.com/salemaziel/hcom"
repository = "https://github.com/salemaziel/hcom"
rust-version = "1.86"

[[bin]]
name = "hcom"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.31.2", features = ["term", "signal", "poll", "process", "fs", "ioctl"] }
vt100 = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2.184"
rusqlite = { version = "0.39.0", features = ["bundled"] }
regex = "1"
thiserror = "2"
# Client mode dependencies
dirs = "6.0.0"
chrono = "0.4"
# TUI dependencies
ratatui = { version = "0.30", features = ["scrolling-regions"] }
crossterm = "0.29"
unicode-width = "0.2"
unicode-segmentation = "1.13.2"
shell-words = "1"
toml = "1.1.2"
toml_edit = "0.25.10"
tempfile = "3"
rand = "0.10.0"
glob = "0.3"
signal-hook = "0.4.4"
uuid = { version = "1.23.0", features = ["v4"] }
# Relay (MQTT) dependencies
rumqttc = { version = "0.25.1", default-features = false, features = ["use-rustls"] }
base64 = "0.22"
sha2 = "0.11.0"
chacha20poly1305 = "0.10"
bytes = "1"
rustls = "0.23.37"
webpki-roots = "1.0.6"
rustls-native-certs = "0.8.3"
lru = "0.16"

[dev-dependencies]
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
